@@ -4,16 +4,21 @@ import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.braekpo1nt.mctmanager.Main;
 import org.braekpo1nt.mctmanager.games.GameManager;
-import org.braekpo1nt.mctmanager.games.MCTGames;
+import org.braekpo1nt.mctmanager.games.game.enums.GameType;
+import org.braekpo1nt.mctmanager.games.utils.GameManagerUtils;
 import org.braekpo1nt.mctmanager.ui.TimeStringUtils;
+import org.braekpo1nt.mctmanager.ui.sidebar.Sidebar;
 import org.bukkit.Bukkit;
 import org.bukkit.Color;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
+import org.bukkit.event.HandlerList;
 import org.bukkit.event.Listener;
+import org.bukkit.event.entity.EntityDamageEvent;
 import org.bukkit.event.inventory.InventoryClickEvent;
 import org.bukkit.event.inventory.InventoryCloseEvent;
+import org.bukkit.event.player.PlayerDropItemEvent;
 import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
@@ -22,95 +27,184 @@ import org.bukkit.inventory.meta.LeatherArmorMeta;
 import org.bukkit.scheduler.BukkitRunnable;
 
 import java.util.*;
+import java.util.function.Consumer;
 
 public class VoteManager implements Listener {
     
+    private int voteCountDownDuration;
     private final Component TITLE = Component.text("Vote for a Game");
     
     private final GameManager gameManager;
-    private final Map<UUID, MCTGames> votes = new HashMap<>();
+    private Sidebar sidebar;
+    private Sidebar adminSidebar;
+    private final Map<UUID, GameType> votes = new HashMap<>();
     private final Main plugin;
-    private List<Player> voters = new ArrayList<>();
+    private final List<Player> voters = new ArrayList<>();
+    private final List<Player> admins = new ArrayList<>();
     private boolean voting = false;
     private final Component NETHER_STAR_NAME = Component.text("Vote");
+    private final ItemStack NETHER_STAR;
     private int voteCountDownTaskId;
-    private List<MCTGames> votingPool = new ArrayList<>();
-
+    private List<GameType> votingPool = new ArrayList<>();
+    private Consumer<GameType> executeMethod;
+    private boolean paused = false;
+    
     public VoteManager(GameManager gameManager, Main plugin) {
         this.gameManager = gameManager;
         this.plugin = plugin;
-        plugin.getServer().getPluginManager().registerEvents(this, plugin);
+        this.NETHER_STAR = new ItemStack(Material.NETHER_STAR);
+        ItemMeta netherStarMeta = this.NETHER_STAR.getItemMeta();
+        netherStarMeta.displayName(NETHER_STAR_NAME);
+        this.NETHER_STAR.setItemMeta(netherStarMeta);
     }
     
-    public void startVote(List<Player> participants, List<MCTGames> votingPool) {
+    /**
+     *Starts a voting phase with the given list of participants using the given voting pool
+     * @param newParticipants The participants who should vote
+     * @param votingPool The games to vote between
+     * @param duration how long (in seconds) the vote should last
+     * @param executeMethod the method to execute when the voting is over (either because the duration
+     *                      is up or all voters have voted). It will be passed the voted for
+     *                      GameType.
+     */
+    public void startVote(List<Player> newParticipants, List<GameType> votingPool, int duration, Consumer<GameType> executeMethod, List<Player> newAdmins) {
+        this.executeMethod = executeMethod;
+        this.voteCountDownDuration = duration;
         voting = true;
+        paused = false;
         votes.clear();
         voters.clear();
         this.votingPool = votingPool;
-        for (Player participant : participants) {
-            showVoteGui(participant);
-            this.voters.add(participant);
-            participant.sendMessage(Component.text("Vote for the game you want to play")
-                    .color(NamedTextColor.GREEN));
+        sidebar = gameManager.getSidebarFactory().createSidebar();
+        adminSidebar = gameManager.getSidebarFactory().createSidebar();
+        plugin.getServer().getPluginManager().registerEvents(this, plugin);
+        for (Player participant : newParticipants) {
+            initializeParticipant(participant);
         }
+        initializeSidebar();
+        startAdmins(newAdmins);
         startVoteCountDown();
+    }
+    
+    private void startAdmins(List<Player> newAdmins) {
+        this.admins.clear();
+        for (Player admin : newAdmins) {
+            initializeAdmin(admin);
+        }
+        initializeAdminSidebar();
+    }
+    
+    private void initializeAdmin(Player admin) {
+        this.admins.add(admin);
+        adminSidebar.addPlayer(admin);
+    }
+    
+    public void onAdminJoin(Player admin) {
+        if (!voting) {
+            return;
+        }
+        initializeAdmin(admin);
+    }
+    
+    public void onAdminQuit(Player admin) {
+        if (!voting) {
+            return;
+        }
+        admins.remove(admin);
+        adminSidebar.removePlayer(admin);
+    }
+    
+    private void initializeParticipant(Player voter) {
+        if (!voting) {
+            return;
+        }
+        this.voters.add(voter);
+        sidebar.addPlayer(voter);
+        if (paused) {
+            return;
+        }
+        showVoteGui(voter);
+        voter.sendMessage(Component.text("Vote for the game you want to play")
+                .color(NamedTextColor.GREEN));
+    }
+    
+    public void onParticipantJoin(Player voter) {
+        if (!voting) {
+            return;
+        }
+        initializeParticipant(voter);
+    }
+    
+    public void onParticipantQuit(Player voter) {
+        resetParticipant(voter);
+        voters.remove(voter);
+        sidebar.removePlayer(voter);
+        if (votes.containsKey(voter.getUniqueId())) {
+            votes.remove(voter.getUniqueId());
+        }
     }
     
     private void startVoteCountDown() {
         this.voteCountDownTaskId = new BukkitRunnable() {
-            private int count = 60;
+            private int count = voteCountDownDuration;
             @Override
             public void run() {
-                if (count <= 0) {
-                    messageAllVoters(Component.text("Voting is over"));
-                } else {
-                    String timeString = TimeStringUtils.getTimeString(count);
-                    for (Player participant : voters) {
-                        updateVoteTimerFastBoard(participant, timeString);
-                    }
+                if (paused) {
+                    return;
                 }
                 if (count <= 0) {
+                    messageAllVoters(Component.text("Voting is over"));
                     executeVote();
                     this.cancel();
                     return;
                 }
+                String timeLeft = TimeStringUtils.getTimeString(count);
+                sidebar.updateLine("timer", String.format("Voting: %s", timeLeft));
+                adminSidebar.updateLine("timer", String.format("Voting: %s", timeLeft));
                 count--;
             }
         }.runTaskTimer(plugin, 0L, 20L).getTaskId();
     }
     
-    private void updateVoteTimerFastBoard(Player participant, String timeString) {
-        gameManager.getFastBoardManager().updateLines(
-                participant.getUniqueId(),
-                "",
-                "Voting:",
-                timeString
-        );
+    private void initializeAdminSidebar() {
+        adminSidebar.addLine("timer", "");
     }
     
-    private void hideFastBoard(Player participant) {
-        gameManager.getFastBoardManager().updateLines(
-                participant.getUniqueId()
-        );
+    private void clearAdminSidebar() {
+        adminSidebar.removeAllPlayers();
+        adminSidebar.deleteAllLines();
+        adminSidebar = null;
     }
     
+    private void initializeSidebar() {
+        sidebar.addLine("timer", "");
+    }
+    
+    private void clearSidebar() {
+        sidebar.removeAllPlayers();
+        sidebar.deleteAllLines();
+        sidebar = null;
+    }
     
     @EventHandler
-    private void clickEvent(InventoryClickEvent event) {
+    private void clickVoteInventory(InventoryClickEvent event) {
         if (!voting) {
             return;
         }
         if (event.getClickedInventory() == null) {
             return;
         }
-        if (!event.getView().title().equals(TITLE)) {
-            return;
-        }
         if (event.getCurrentItem() == null) {
             return;
         }
         Player participant = ((Player) event.getWhoClicked());
-        if (!gameManager.isParticipant(participant.getUniqueId())) {
+        if (!voters.contains(participant)) {
+            return;
+        }
+        if (!event.getView().title().equals(TITLE)) {
+            if (GameManagerUtils.INV_REMOVE_ACTIONS.contains(event.getAction())) {
+                event.setCancelled(true);
+            }
             return;
         }
         event.setCancelled(true);
@@ -119,72 +213,75 @@ public class VoteManager implements Listener {
                     .color(NamedTextColor.GREEN));
             return;
         }
-        if (participantAbstained(participant)) {
-            votes.remove(participant.getUniqueId());
-        }
         Material clickedItem = event.getCurrentItem().getType();
         switch (clickedItem) {
-            case FEATHER:
-                votes.put(participant.getUniqueId(), MCTGames.FOOT_RACE);
+            case FEATHER -> {
+                votes.put(participant.getUniqueId(), GameType.FOOT_RACE);
                 participant.sendMessage(Component.text("Voted for Foot Race")
                         .color(NamedTextColor.GREEN));
-                break;
-            case IRON_SWORD:
-                votes.put(participant.getUniqueId(), MCTGames.MECHA);
+            }
+            case IRON_SWORD -> {
+                votes.put(participant.getUniqueId(), GameType.MECHA);
                 participant.sendMessage(Component.text("Voted for MECHA")
                         .color(NamedTextColor.GREEN));
-                break;
-            case GRAY_BANNER:
-                votes.put(participant.getUniqueId(), MCTGames.CAPTURE_THE_FLAG);
+            }
+            case GRAY_BANNER -> {
+                votes.put(participant.getUniqueId(), GameType.CAPTURE_THE_FLAG);
                 participant.sendMessage(Component.text("Voted for Capture the Flag")
                         .color(NamedTextColor.GREEN));
-                break;
-            case DIAMOND_SHOVEL:
-                votes.put(participant.getUniqueId(), MCTGames.SPLEEF);
+            }
+            case DIAMOND_SHOVEL -> {
+                votes.put(participant.getUniqueId(), GameType.SPLEEF);
                 participant.sendMessage(Component.text("Voted for Spleef")
                         .color(NamedTextColor.GREEN));
-                break;
-            case LEATHER_BOOTS:
-                votes.put(participant.getUniqueId(), MCTGames.PARKOUR_PATHWAY);
+            }
+            case LEATHER_BOOTS -> {
+                votes.put(participant.getUniqueId(), GameType.PARKOUR_PATHWAY);
                 participant.sendMessage(Component.text("Voted for Parkour Pathway")
                         .color(NamedTextColor.GREEN));
-                break;
-            default:
+            }
+            case CLOCK -> {
+                votes.put(participant.getUniqueId(), GameType.CLOCKWORK);
+                participant.sendMessage(Component.text("Voted for Clockwork")
+                        .color(NamedTextColor.GREEN));
+            }
+            default -> {
                 return;
+            }
         }
         participant.closeInventory();
     }
-
+    
+    /**
+     * Stop players from dropping items
+     */
+    @EventHandler
+    public void onDropItem(PlayerDropItemEvent event) {
+        if (!voting) {
+            return;
+        }
+        Player participant = event.getPlayer();
+        if (!voters.contains(participant)) {
+            return;
+        }
+        event.setCancelled(true);
+    }
+    
     /**
      * Checks if the participant submitted a vote already
      * @param participant the participant to check
      * @return True of the participant voted, false if they haven't yet
-     * or if they have abstained (see {@link VoteManager#participantAbstained(Player)})
      */
     private boolean participantVoted(Player participant) {
-        if (!votes.containsKey(participant.getUniqueId())) {
-            return false;
-        }
-        return votes.get(participant.getUniqueId()) != null;
+        return votes.containsKey(participant.getUniqueId());
     }
-
-    /**
-     * Checks if the participant abstained from voting
-     * @param participant the participant
-     * @return True if the participant abstained from voting,
-     * false if they voted or didn't vote or abstain yet (i.e. still
-     * in the voting gui)
-     */
-    private boolean participantAbstained(Player participant) {
-        if (!votes.containsKey(participant.getUniqueId())) {
-            return false;
-        }
-        return votes.get(participant.getUniqueId()) == null;
-    }
-
+    
     @EventHandler
     private void onCloseMenu(InventoryCloseEvent event) {
         if (!voting) {
+            return;
+        }
+        if (paused) {
             return;
         }
         if (!event.getView().title().equals(TITLE)) {
@@ -200,14 +297,57 @@ public class VoteManager implements Listener {
             if (participantVoted(participant)) {
                 return;
             }
-            ItemStack netherStar = new ItemStack(Material.NETHER_STAR);
-            ItemMeta netherStarMeta = netherStar.getItemMeta();
-            netherStarMeta.displayName(NETHER_STAR_NAME);
-            netherStar.setItemMeta(netherStarMeta);
-            participant.getInventory().addItem(netherStar);
+            participant.getInventory().addItem(NETHER_STAR);
             participant.sendMessage(Component.text("You didn't vote for a game. Use the nether star to vote.")
-                    .color(NamedTextColor.DARK_RED));
-            votes.put(participant.getUniqueId(), null);
+                    .color(NamedTextColor.YELLOW));
+        }
+    }
+    
+    @EventHandler
+    public void onPlayerDamage(EntityDamageEvent event) {
+        if (!voting) {
+            return;
+        }
+        if (event.getCause().equals(EntityDamageEvent.DamageCause.VOID)) {
+            return;
+        }
+        if (!(event.getEntity() instanceof Player voter)) {
+            return;
+        }
+        if (!voters.contains(voter)) {
+            return;
+        }
+        event.setCancelled(true);
+    }
+    
+    /**
+     * Pauses the vote. If no vote is running, nothing happens. Removes UI from players,
+     * removes nether stars from players, pauses the timer, and retains player votes for resuming.
+     */
+    public void pauseVote() {
+        paused = true;
+        for (Player voter : voters) {
+            voter.closeInventory();
+            voter.getInventory().remove(NETHER_STAR);
+        }
+        messageAllVoters(Component.text("Voting is paused.")
+                .color(NamedTextColor.YELLOW));
+    }
+    
+    /**
+     * Resumes a paused vote. If the vote is not currently paused, nothing happens. Gives the UI
+     * back to players who have not yet voted, resumes the timer, and retains any votes that
+     * occurred before the pause.
+     */
+    public void resumeVote() {
+        if (!paused) {
+            return;
+        }
+        paused = false;
+        for (Player voter : voters) {
+            if (!participantVoted(voter)) {
+                showVoteGui(voter);
+            }
         }
     }
     
@@ -219,49 +359,67 @@ public class VoteManager implements Listener {
             return;
         }
         voting = false;
-        Bukkit.getScheduler().cancelTask(voteCountDownTaskId);
+        paused = false;
+        cancelAllTasks();
         for (Player voter : voters) {
-            voter.closeInventory();
-            voter.getInventory().clear();
-            hideFastBoard(voter);
+            resetParticipant(voter);
         }
+        clearSidebar();
+        clearAdminSidebar();
         messageAllVoters(Component.text("Cancelling vote"));
+        HandlerList.unregisterAll(this);
         votes.clear();
         voters.clear();
+        admins.clear();
+    }
+    
+    private static void resetParticipant(Player voter) {
+        voter.closeInventory();
+        voter.getInventory().clear();
     }
     
     private void executeVote() {
         voting = false;
-        Bukkit.getScheduler().cancelTask(voteCountDownTaskId);
+        paused = false;
+        cancelAllTasks();
         for (Player voter : voters) {
-            voter.closeInventory();
-            voter.getInventory().clear();
-            hideFastBoard(voter);
+            resetParticipant(voter);
         }
-        MCTGames mctGame = getVotedGame();
+        GameType gameType = getVotedForGame();
+        HandlerList.unregisterAll(this);
         votes.clear();
         voters.clear();
-        gameManager.startGame(mctGame, Bukkit.getConsoleSender());
+        clearSidebar();
+        admins.clear();
+        clearAdminSidebar();
+        executeMethod.accept(gameType);
+    }
+    
+    private void cancelAllTasks() {
+        Bukkit.getScheduler().cancelTask(voteCountDownTaskId);
     }
     
     @EventHandler
-    public void onClickNetherStar(PlayerInteractEvent event) {
+    public void interactWithNetherStar(PlayerInteractEvent event) {
         if (!voting) {
             return;
         }
         Player participant = event.getPlayer();
-        if (!gameManager.isParticipant(participant.getUniqueId())) {
+        if (paused) {
+            participant.sendMessage(Component.text("Voting is paused.")
+                    .color(NamedTextColor.YELLOW));
             return;
         }
-        ItemStack item = event.getItem();
-        if (item == null) {
+        if (!voters.contains(participant)) {
             return;
         }
-        if (item.getType() != Material.NETHER_STAR) {
+        ItemStack netherStar = event.getItem();
+        if (netherStar == null ||
+                !netherStar.getType().equals(Material.NETHER_STAR)) {
             return;
         }
-        ItemMeta netherStarMeta = item.getItemMeta();
-        if (netherStarMeta == null || !netherStarMeta.hasDisplayName() || !netherStarMeta.displayName().equals(NETHER_STAR_NAME)) {
+        ItemMeta netherStarMeta = netherStar.getItemMeta();
+        if (netherStarMeta == null || !netherStarMeta.hasDisplayName() || !Objects.equals(netherStarMeta.displayName(), NETHER_STAR_NAME)) {
             return;
         }
         if (!voters.contains(participant)) {
@@ -272,33 +430,58 @@ public class VoteManager implements Listener {
                     .color(NamedTextColor.GREEN));
             return;
         }
-        participant.getInventory().remove(item);
+        event.setCancelled(true);
+        participant.getInventory().remove(netherStar);
         showVoteGui(participant);
     }
     
-    private MCTGames getVotedGame() {
+    @EventHandler
+    public void clickNetherStar(InventoryClickEvent event) {
+        if (!voting) {
+            return;
+        }
+        Player participant = ((Player) event.getWhoClicked());
+        if (!gameManager.isParticipant(participant.getUniqueId())) {
+            return;
+        }
+        ItemStack netherStar = event.getCurrentItem();
+        if (netherStar == null ||
+                !netherStar.getType().equals(Material.NETHER_STAR)) {
+            return;
+        }
+        ItemMeta netherStarMeta = netherStar.getItemMeta();
+        if (netherStarMeta == null || !netherStarMeta.hasDisplayName() || !Objects.equals(netherStarMeta.displayName(), NETHER_STAR_NAME)) {
+            return;
+        }
+        if (!voters.contains(participant)) {
+            voters.add(participant);
+        }
+        if (participantVoted(participant)) {
+            participant.sendMessage(Component.text("You already voted.")
+                    .color(NamedTextColor.GREEN));
+            event.setCancelled(true);
+            return;
+        }
+        event.setCancelled(true);
+        participant.getInventory().remove(netherStar);
+        showVoteGui(participant);
+    }
+    
+    private GameType getVotedForGame() {
         Random random = new Random();
-        Map<MCTGames, Integer> voteCount = new HashMap<>();
-    
+        
         if (votes.isEmpty()) {
-            int randomGameIndex = random.nextInt(3);
-            return Arrays.asList(
-                    MCTGames.FOOT_RACE, 
-                    MCTGames.MECHA, 
-                    MCTGames.CAPTURE_THE_FLAG, 
-                    MCTGames.SPLEEF, 
-                    MCTGames.PARKOUR_PATHWAY
-            ).get(randomGameIndex);
+            int randomGameIndex = random.nextInt(votingPool.size());
+            return votingPool.get(randomGameIndex);
         }
-    
+        
+        Map<GameType, Integer> voteCount = new HashMap<>();
         // Count the number of occurrences of each string in the list
-        for (MCTGames vote : votes.values()) {
-            if (vote != null) {
-                int count = voteCount.getOrDefault(vote, 0);
-                voteCount.put(vote, count + 1);
-            }
+        for (GameType vote : votes.values()) {
+            int count = voteCount.getOrDefault(vote, 0);
+            voteCount.put(vote, count + 1);
         }
-    
+        
         // Find the maximum number of occurrences
         int maxCount = 0;
         for (Integer count : voteCount.values()) {
@@ -306,15 +489,15 @@ public class VoteManager implements Listener {
                 maxCount = count;
             }
         }
-    
+        
         // Get all strings with the maximum number of occurrences
-        List<MCTGames> winners = new ArrayList<>();
-        for (Map.Entry<MCTGames, Integer> entry : voteCount.entrySet()) {
+        List<GameType> winners = new ArrayList<>();
+        for (Map.Entry<GameType, Integer> entry : voteCount.entrySet()) {
             if (entry.getValue() == maxCount) {
                 winners.add(entry.getKey());
             }
         }
-    
+        
         // Randomly select a winner from the list of strings with the maximum number of occurrences
         int index = random.nextInt(winners.size());
         return winners.get(index);
@@ -322,7 +505,7 @@ public class VoteManager implements Listener {
     
     private boolean allPlayersHaveVoted() {
         for (Player participant : voters) {
-            if (!participantVoted(participant) && !participantAbstained(participant)) {
+            if (!participantVoted(participant)) {
                 return false;
             }
         }
@@ -334,7 +517,7 @@ public class VoteManager implements Listener {
 
         ItemMeta footRaceMeta = footRace.getItemMeta();
         footRaceMeta.displayName(Component.text("Foot Race"));
-        footRaceMeta.lore(Arrays.asList(
+        footRaceMeta.lore(List.of(
                 Component.text("A racing game")
         ));
         footRace.setItemMeta(footRaceMeta);
@@ -342,7 +525,7 @@ public class VoteManager implements Listener {
         ItemStack mecha = new ItemStack(Material.IRON_SWORD);
         ItemMeta mechaMeta = mecha.getItemMeta();
         mechaMeta.displayName(Component.text("MECHA"));
-        mechaMeta.lore(Arrays.asList(
+        mechaMeta.lore(List.of(
                 Component.text("A fighting game")
         ));
         mecha.setItemMeta(mechaMeta);
@@ -350,15 +533,23 @@ public class VoteManager implements Listener {
         ItemStack captureTheFlag = new ItemStack(Material.GRAY_BANNER);
         ItemMeta captureTheFlagMeta = captureTheFlag.getItemMeta();
         captureTheFlagMeta.displayName(Component.text("Capture the Flag"));
-        captureTheFlagMeta.lore(Arrays.asList(
+        captureTheFlagMeta.lore(List.of(
                 Component.text("A team capture the flag game")
         ));
         captureTheFlag.setItemMeta(captureTheFlagMeta);
+        
+        ItemStack clockwork = new ItemStack(Material.CLOCK);
+        ItemMeta clockworkMeta = clockwork.getItemMeta();
+        clockworkMeta.displayName(Component.text("Clockwork"));
+        clockworkMeta.lore(List.of(
+                Component.text("A time-sensitive game")
+        ));
+        clockwork.setItemMeta(clockworkMeta);
 
         ItemStack parkourPathway = new ItemStack(Material.LEATHER_BOOTS);
         ItemMeta parkourPathwayMeta = parkourPathway.getItemMeta();
         parkourPathwayMeta.displayName(Component.text("Parkour Pathway"));
-        parkourPathwayMeta.lore(Arrays.asList(
+        parkourPathwayMeta.lore(List.of(
                 Component.text("A jumping game")
         ));
         LeatherArmorMeta parkourPathwayLeatherArmorMeta = ((LeatherArmorMeta) parkourPathwayMeta);
@@ -368,20 +559,21 @@ public class VoteManager implements Listener {
         ItemStack spleef = new ItemStack(Material.DIAMOND_SHOVEL);
         ItemMeta spleefMeta = spleef.getItemMeta();
         spleefMeta.displayName(Component.text("Spleef"));
-        spleefMeta.lore(Arrays.asList(
+        spleefMeta.lore(List.of(
                 Component.text("A falling game")
         ));
         spleef.setItemMeta(spleefMeta);
-    
-        Inventory newGui = Bukkit.createInventory(null, 9, TITLE);
-        Map<MCTGames, ItemStack> votingItems = new HashMap<>();
-        votingItems.put(MCTGames.FOOT_RACE, footRace);
-        votingItems.put(MCTGames.MECHA, mecha);
-        votingItems.put(MCTGames.CAPTURE_THE_FLAG, captureTheFlag);
-        votingItems.put(MCTGames.SPLEEF, spleef);
-        votingItems.put(MCTGames.PARKOUR_PATHWAY, parkourPathway);
         
-        for (MCTGames mctGame : votingPool) {
+        Inventory newGui = Bukkit.createInventory(null, 9, TITLE);
+        Map<GameType, ItemStack> votingItems = new HashMap<>();
+        votingItems.put(GameType.FOOT_RACE, footRace);
+        votingItems.put(GameType.MECHA, mecha);
+        votingItems.put(GameType.CAPTURE_THE_FLAG, captureTheFlag);
+        votingItems.put(GameType.SPLEEF, spleef);
+        votingItems.put(GameType.PARKOUR_PATHWAY, parkourPathway);
+        votingItems.put(GameType.CLOCKWORK, clockwork);
+        
+        for (GameType mctGame : votingPool) {
             newGui.addItem(votingItems.get(mctGame));
         }
         participant.openInventory(newGui);
@@ -391,6 +583,10 @@ public class VoteManager implements Listener {
         for (Player voter : voters) {
             voter.sendMessage(message);
         }
+    }
+    
+    public boolean isVoting() {
+        return voting;
     }
     
 }
